[gd_scene load_steps=10 format=4 uid="uid://c64fwdu2nkona"]

[ext_resource type="PackedScene" uid="uid://b46qouyu3lx2m" path="res://scenes/windows/window_base.tscn" id="1"]
[ext_resource type="Script" uid="uid://c5ir1u4g1ko54" path="res://scenes/windows/window_data_lab.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://2wu65e67ukhm" path="res://textures/icons/research.png" id="3"]
[ext_resource type="PackedScene" uid="uid://bkwfereat3li2" path="res://scenes/resource_container.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://co5icrrrwscgg" path="res://scenes/input_container.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://b4efojcll7i7" path="res://scenes/output_container.tscn" id="6"]
[ext_resource type="Script" uid="uid://citplohrg08kx" path="res://scripts/dim_button.gd" id="7"]
[ext_resource type="Texture2D" uid="uid://8sorr10f66nw" path="res://textures/icons/money.png" id="8"]
[ext_resource type="AudioStream" uid="uid://b1kejtidqiijx" path="res://audio/sfx/task_completed4.wav" id="9"]

[node name="WindowBase" instance=ExtResource("1")]
offset_bottom = 113.0
script = ExtResource("2")
window = "data_lab"

[node name="Icon" parent="TitlePanel/TitleContainer" index="0"]
texture = ExtResource("3")

[node name="Title" parent="TitlePanel/TitleContainer" index="1"]
text = "window_data_lab"

[node name="PanelContainer" parent="." index="1"]
theme_type_variation = &"WindowPanelContainerFlatBottom"

[node name="MainContainer" type="VBoxContainer" parent="PanelContainer" index="0"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 10

[node name="ResearchPower" parent="PanelContainer/MainContainer" index="0" instance=ExtResource("4")]
layout_mode = 2
default_resource = "research_power"
limit = -1.0

[node name="Boost" parent="PanelContainer/MainContainer" index="1" instance=ExtResource("5")]
layout_mode = 2
default_resource = "boost_research"
limit = -1.0

[node name="File" parent="PanelContainer/MainContainer" index="2" instance=ExtResource("5")]
layout_mode = 2
placeholder_name = "input_file"
override_connector = "square"
override_color = "lime"

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/MainContainer" index="3"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"ProgressBarBlue"
max_value = 1.0
step = 0.001
show_percentage = false

[node name="Points" parent="PanelContainer/MainContainer" index="4" instance=ExtResource("6")]
layout_mode = 2
default_resource = "research"

[node name="UpgradeButton" type="Button" parent="." index="2"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
focus_mode = 0
theme_type_variation = &"WindowButtonBottom2"
script = ExtResource("7")

[node name="UpgradeContainer" type="VBoxContainer" parent="UpgradeButton" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Label" type="Label" parent="UpgradeButton/UpgradeContainer" index="0"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "action_upgrade"
horizontal_alignment = 1

[node name="CostContainer" type="HBoxContainer" parent="UpgradeButton/UpgradeContainer" index="1"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="UpgradeButton/UpgradeContainer/CostContainer" index="0"]
self_modulate = Color(1, 0.521569, 0, 1)
custom_minimum_size = Vector2(23, 23)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("8")
expand_mode = 1

[node name="Label" type="Label" parent="UpgradeButton/UpgradeContainer/CostContainer" index="1"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 0.521569, 0, 1)
theme_override_font_sizes/font_size = 18
text = "1"
vertical_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="4"]
stream = ExtResource("9")
max_distance = 1200.0
max_polyphony = 5
bus = &"Window SFX"

[connection signal="resource_set" from="PanelContainer/MainContainer/Boost" to="." method="_on_file_resource_set"]
[connection signal="resource_set" from="PanelContainer/MainContainer/File" to="." method="_on_file_resource_set"]
[connection signal="pressed" from="UpgradeButton" to="." method="_on_upgrade_button_pressed"]
